<resources>
    <string name="app_name">Fun with Sensors</string>

    <!-- Main activity buttons -->
    <string name="sensor_list_button">Sensor List</string>
    <string name="gyro_button">Gyroscope</string>
    <string name="accel_button">Accelerometer</string>
    <string name="camera_button">Camera</string>
    <string name="photo_express_button">Photo Express</string>

    <!-- Sensor list activity -->
    <string name="sensor_list_heading">Sensor List</string>

    <!-- Gyroscope activity -->
    <string name="gyro_heading">Gyroscope</string>

    <!-- Accelerometer activity -->
    <string name="accel_heading">Accelerometer</string>

    <!-- Camera activity -->
    <string name="take_photo_button">Take Photo</string>

    <!-- Photo Express activity -->
    <string name="take_photo">Take Photo</string>
    <string name="save">Save</string>
    <string name="photo_desc">Photo from camera</string>
    <string name="photo_saved">Photo saved.</string>
    <string name="photo_not_saved">Problem saving the photo.</string>

</resources>


